syntax = "proto3";

package common;

// Enum defining the various statuses that a resource spec can be in.
enum SpecStatus {
  Creating = 0;
  Created = 1;
  Deleting = 2;
  Deleted = 3;
}

// StringMapValue is the type having a hashmap
message StringMapValue {
  map<string, string> value = 1;
}
